--- a/index.html
+++ b/index.html
@@ -1,73 +1,341 @@
-let modelData = []; // Initialize empty array
-const viewer = document.querySelector('#main-viewer');
-const modelSelect = document.querySelector('#model-select');
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <title>YUNEXPRESS - GLOBAL FLEET TRACKER</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    
+    <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.4.0/model-viewer.min.js"></script>
+    
+    <style>
+        :root {
+            --app-bg: #0b0e14;
+            --yun-orange: #ff6a00; 
+            --yun-blue: #003366;   
+            --glass: rgba(255, 255, 255, 0.03);
+            --glass-border: rgba(255, 255, 255, 0.08);
+            --accent: #ff9d5c;
+        }
 
-// 1. Fetch data from the external JSON file
-async function loadModelData() {
-    try {
-        const response = await fetch('models.json');
-        modelData = await response.json();
-        initializeApp();
-    } catch (error) {
-        console.error("Error loading models.json:", error);
-        document.getElementById('boot-logs').innerText = "Link Failed: JSON Error";
-    }
-}
+        body, html {
+            margin: 0; padding: 0; width: 100%; height: 100%;
+            overflow: hidden; background-color: var(--app-bg);
+            font-family: 'Inter', 'Segoe UI', Roboto, sans-serif;
+        }
 
-// 2. Initialize the UI after data is loaded
-function initializeApp() {
-    modelSelect.innerHTML = ''; 
-    modelData.forEach((m, index) => {
-        const opt = document.createElement('option');
-        opt.value = index;
-        opt.textContent = m.name;
-        modelSelect.appendChild(opt);
-    });
-    updateAsset(0);
-}
+        /* --- START SCREEN --- */
+        #start-screen {
+            position: fixed;
+            top: 0; left: 0; width: 100%; height: 100%;
+            background: radial-gradient(circle at center, #161b22 0%, #0b0e14 100%);
+            z-index: 1000;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            transition: opacity 0.8s ease, visibility 0.8s;
+        }
 
-// 3. Update the viewer and metadata
-function updateAsset(index) {
-    const asset = modelData[index];
-    
-    // Update model sources
-    viewer.src = `models/${asset.file}.glb`;
-    viewer.setAttribute('ios-src', `models/${asset.file}.usdz`);
-    
-    // Update Metadata Panels
-    document.getElementById('asset-title').textContent = asset.name;
-    document.getElementById('spec-crew').textContent = asset.crew;
-    document.getElementById('spec-base').textContent = asset.base;
-    document.getElementById('spec-weapons').textContent = asset.weapons;
-    document.getElementById('spec-weight').textContent = asset.weight;
-    document.getElementById('spec-length').textContent = asset.length;
-    document.getElementById('spec-payload').textContent = asset.payload;
-    document.getElementById('spec-desc').textContent = asset.description;
-}
+        .radar {
+            position: absolute;
+            width: 450px; height: 450px;
+            border: 1px solid rgba(255, 106, 0, 0.15);
+            border-radius: 50%;
+            pointer-events: none;
+        }
+        .radar::after {
+            content: "";
+            position: absolute;
+            width: 50%; height: 50%;
+            top: 0; left: 0;
+            background: conic-gradient(from 0deg, rgba(255, 106, 0, 0.25), transparent 90deg);
+            border-radius: 100% 0 0 0;
+            transform-origin: 100% 100%;
+            animation: sweep 4s linear infinite;
+        }
 
-// 4. UI Functions
-function toggleDetails() {
-    document.getElementById('details-panel').classList.toggle('active');
-}
+        @keyframes sweep { from { transform: rotate(0deg); } to { transform: rotate(360deg); } }
 
-function enterApp() {
-    const startScreen = document.getElementById('start-screen');
-    startScreen.style.opacity = '0';
-    setTimeout(() => startScreen.style.visibility = 'hidden', 800);
-}
+        .start-ui { text-align: center; z-index: 1001; padding: 20px; }
 
-// Start Boot Sequence
-const logs = ["Connecting...", "Syncing GSE Data...", "Mapping USDZ Telemetry...", "Active."];
-let logIndex = 0;
-function updateLogs() {
-    if (logIndex < logs.length) {
-        document.getElementById('boot-logs').innerText = logs[logIndex];
-        logIndex++;
-        setTimeout(updateLogs, 600);
-    }
-}
+        .yun-logo {
+            width: 80px; height: 40px;
+            margin-bottom: 25px;
+            display: inline-flex; justify-content: center; align-items: center;
+            font-weight: 900; color: white; background: var(--yun-orange);
+            border-radius: 4px; font-style: italic; letter-spacing: -1px;
+            box-shadow: 0 10px 20px rgba(255, 106, 0, 0.2);
+        }
 
-updateLogs();
-loadModelData(); // Trigger the fetch
+        .title-main { 
+            font-size: 20px; color: white; letter-spacing: 4px; 
+            text-transform: uppercase; margin-bottom: 5px; font-weight: 300;
+        }
+        .boot-logs { 
+            font-family: 'Courier New', monospace; font-size: 10px; 
+            color: var(--accent); height: 20px; margin-bottom: 35px; opacity: 0.7; 
+        }
 
-modelSelect.addEventListener('change', (e) => updateAsset(e.target.value));
+        .commence-btn {
+            background: transparent; color: white; border: 1px solid var(--yun-orange);
+            padding: 14px 35px; border-radius: 4px; letter-spacing: 2px; font-weight: bold;
+            cursor: pointer; transition: all 0.3s; text-transform: uppercase;
+        }
+        .commence-btn:hover { background: var(--yun-orange); box-shadow: 0 0 20px rgba(255, 106, 0, 0.4); }
+
+        /* --- MAIN VIEWER & UI --- */
+        model-viewer {
+            width: 100vw; height: 100vh;
+            background-color: #0f141d;
+            --poster-color: transparent;
+        }
+
+        .app-overlay {
+            position: absolute; top: 20px; left: 50%;
+            transform: translateX(-50%); z-index: 100;
+            width: 90%; max-width: 500px;
+        }
+
+        .control-panel {
+            background: var(--glass); 
+            backdrop-filter: blur(20px);
+            -webkit-backdrop-filter: blur(20px);
+            border: 1px solid var(--glass-border);
+            padding: 12px 18px; 
+            border-radius: 16px;
+            display: flex; 
+            justify-content: space-between; 
+            align-items: center;
+            gap: 15px;
+        }
+
+        .panel-info {
+            display: flex; flex-direction: column; flex-grow: 1; overflow: hidden;
+        }
+
+        .panel-label {
+            font-size: 9px;
+            color: var(--accent);
+            text-transform: uppercase;
+            font-weight: 800;
+            letter-spacing: 1.5px;
+        }
+
+        select {
+            background: transparent; color: white; border: none;
+            font-weight: bold; outline: none; cursor: pointer;
+            font-size: 15px; width: 100%; text-overflow: ellipsis;
+        }
+
+        option { background: #161b22; color: white; }
+
+        .factsheet-btn {
+            background: var(--yun-orange); 
+            color: white; border: none;
+            padding: 10px 16px; border-radius: 8px; 
+            font-size: 10px; font-weight: 800; 
+            cursor: pointer; text-transform: uppercase;
+            white-space: nowrap; transition: transform 0.2s;
+        }
+        .factsheet-btn:hover { transform: scale(1.05); }
+
+        /* --- SPECS PANEL --- */
+        .details-panel {
+            position: absolute; top: 0; right: -100%;
+            width: 100%; max-width: 400px; height: 100%;
+            background: rgba(11, 14, 20, 0.98); backdrop-filter: blur(30px);
+            z-index: 300; transition: right 0.6s cubic-bezier(0.16, 1, 0.3, 1);
+            color: white; border-left: 1px solid var(--glass-border);
+            overflow-y: auto;
+        }
+        .details-panel.active { right: 0; }
+        .details-inner { padding: 40px 30px; }
+        
+        .spec-grid {
+            display: grid; grid-template-columns: 1fr 1fr;
+            gap: 20px; margin-top: 25px;
+        }
+        .spec-item { border-bottom: 1px solid var(--glass-border); padding-bottom: 12px; }
+        .full-width { grid-column: span 2; }
+        .spec-label { font-size: 9px; color: var(--accent); text-transform: uppercase; font-weight: 800; }
+        .spec-value { display: block; font-size: 14px; margin-top: 6px; font-weight: 500; color: #f1f5f9; }
+
+        #ar-button {
+            position: absolute; bottom: 40px; left: 50%; transform: translateX(-50%);
+            background: white; color: black; border: none;
+            padding: 16px 32px; border-radius: 8px; font-weight: 800;
+            cursor: pointer; z-index: 50; text-transform: uppercase; font-size: 12px;
+            box-shadow: 0 10px 30px rgba(0,0,0,0.5);
+        }
+    </style>
+</head>
+<body>
+
+    <div id="start-screen">
+        <div class="radar"></div>
+        <div class="start-ui">
+            <div class="yun-logo">YUN</div>
+            <h1 class="title-main">Ground Assets Tracker</h1>
+            <div id="boot-logs" class="boot-logs">Establishing Logistics Link...</div>
+            <button class="commence-btn" onclick="enterApp()">Initialize Link</button>
+        </div>
+    </div>
+
+    <div id="details-panel" class="details-panel">
+        <div class="details-inner">
+            <div class="spec-label" style="color:var(--yun-orange)">Classification: Ground Support</div>
+            <h2 id="asset-title" style="margin: 10px 0; font-size: 26px; text-transform: uppercase; font-weight: 300;">Asset Name</h2>
+            
+            <div class="spec-grid">
+                <div class="spec-item"><span class="spec-label">Operated By</span><span id="spec-crew" class="spec-value">-</span></div>
+                <div class="spec-item"><span class="spec-label">Primary Zone</span><span id="spec-base" class="spec-value">-</span></div>
+                <div class="spec-item"><span class="spec-label">Total Length</span><span id="spec-length" class="spec-value">-</span></div>
+                <div class="spec-item"><span class="spec-label">Unit Weight</span><span id="spec-weight" class="spec-value">-</span></div>
+                <div class="spec-item full-width"><span class="spec-label">Max Capacity/Output</span><span id="spec-payload" class="spec-value">-</span></div>
+                <div class="spec-item full-width"><span class="spec-label">Safety Status</span><span id="spec-weapons" class="spec-value">-</span></div>
+                <div class="spec-item full-width"><span class="spec-label">Operational Profile</span><span id="spec-desc" class="spec-value" style="line-height: 1.5; font-weight: 300; opacity: 0.8;">-</span></div>
+            </div>
+            
+            <button onclick="toggleDetails()" style="margin-top: 40px; background: var(--yun-orange); border: none; color: white; padding: 14px; width: 100%; border-radius: 8px; cursor: pointer; font-weight: bold; text-transform: uppercase; font-size: 11px;">Return to Tracker</button>
+        </div>
+    </div>
+
+    <div class="app-overlay">
+        <div class="control-panel">
+            <div class="panel-info">
+                <span class="panel-label">GSE Telemetry</span>
+                <select id="model-select">
+                    <option>Loading Assets...</option>
+                </select>
+            </div>
+            <button class="factsheet-btn" onclick="toggleDetails()">Specs</button>
+        </div>
+    </div>
+
+    <model-viewer id="main-viewer" 
+                  loading="eager" 
+                  ar 
+                  ar-modes="webxr scene-viewer quick-look" 
+                  camera-controls 
+                  auto-rotate 
+                  shadow-intensity="1.5" 
+                  environment-image="neutral" 
+                  exposure="1.2"
+                  camera-orbit="45deg 75deg 105%"
+                  interaction-prompt="none">
+        <button slot="ar-button" id="ar-button">Deploy USDZ to Workspace</button>
+    </model-viewer>
+
+<script>
+    const modelData = [
+        {
+            "name": "TLD 121 Aircraft Loader",
+            "file": "TLD_121_Aircraft_loader",
+            "crew": "1 Specialist Operator",
+            "base": "Cargo Apron Zone A",
+            "length": "8.2 m",
+            "weight": "12,500 kg",
+            "payload": "7,000 kg Main Deck",
+            "weapons": "Certified Safe",
+            "description": "Critical logistics asset for loading containerized cargo onto YunExpress heavy-lift aircraft."
+        },
+        {
+            "name": "Airport Baggage Truck",
+            "file": "Airport_Baggage_Truck",
+            "crew": "1 Logistics Driver",
+            "base": "Sorting Center",
+            "length": "3.5 m",
+            "weight": "2,200 kg",
+            "payload": "Multiple Cargo Dollies",
+            "weapons": "Beacon Active",
+            "description": "Rapid transit vehicle used to move high-priority parcels from sorting to the runway."
+        },
+        {
+            "name": "Airport Catering Truck",
+            "file": "Airport_Catering_Truck",
+            "crew": "2 Ground Staff",
+            "base": "Service Point",
+            "length": "9.5 m",
+            "weight": "15,000 kg",
+            "payload": "High-Lift Galley Supply",
+            "weapons": "RFID Tracked",
+            "description": "Specialized high-lift truck providing essential cabin services for long-haul crews."
+        },
+        {
+            "name": "Ground Power Unit (GPU)",
+            "file": "GPU_Aiport_Ground_Power_Unit",
+            "crew": "Autonomous / Manual",
+            "base": "Stand 42-60",
+            "length": "4.2 m",
+            "weight": "2,800 kg",
+            "payload": "90 kVA Electric Feed",
+            "weapons": "Standard Compliance",
+            "description": "Powers onboard electronics and climate control while the main engines are powered down."
+        }
+    ];
+
+    const logs = ["Connecting...", "Syncing GSE Data...", "Mapping USDZ Telemetry...", "Active."];
+    let logIndex = 0;
+
+    function updateLogs() {
+        if (logIndex < logs.length) {
+            document.getElementById('boot-logs').innerText = logs[logIndex];
+            logIndex++;
+            setTimeout(updateLogs, 600);
+        }
+    }
+    updateLogs();
+
+    function enterApp() {
+        const startScreen = document.getElementById('start-screen');
+        startScreen.style.opacity = '0';
+        setTimeout(() => startScreen.style.visibility = 'hidden', 800);
+    }
+
+    const viewer = document.querySelector('#main-viewer');
+    const modelSelect = document.querySelector('#model-select');
+
+    function toggleDetails() {
+        document.getElementById('details-panel').classList.toggle('active');
+    }
+
+    function initializeApp() {
+        modelSelect.innerHTML = ''; 
+        modelData.forEach((m, index) => {
+            const opt = document.createElement('option');
+            opt.value = index;
+            opt.textContent = m.name;
+            modelSelect.appendChild(opt);
+        });
+        updateAsset(0);
+    }
+
+    function updateAsset(index) {
+        const asset = modelData[index];
+        
+        // Point to the models folder. 
+        // Note: Browsers need .glb for display, ios-src uses .usdz for AR mode.
+        viewer.src = `models/${asset.file}.glb`;
+        viewer.setAttribute('ios-src', `models/${asset.file}.usdz`);
+        
+        // Update Metadata
+        document.getElementById('asset-title').textContent = asset.name;
+        document.getElementById('spec-crew').textContent = asset.crew;
+        document.getElementById('spec-base').textContent = asset.base;
+        document.getElementById('spec-weapons').textContent = asset.weapons;
+        document.getElementById('spec-weight').textContent = asset.weight;
+        document.getElementById('spec-length').textContent = asset.length;
+        document.getElementById('spec-payload').textContent = asset.payload;
+        document.getElementById('spec-desc').textContent = asset.description;
+    }
+
+    modelSelect.addEventListener('change', (e) => updateAsset(e.target.value));
+    
+    // Start Application
+    initializeApp();
+</script>
+
+</body>
+</html>
+
+use models.json
